# CipheyCore

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-linux.yaml  build-macos.yaml  build-on-push.yaml  build-win.yaml  test.yaml  test2.yaml
cmake/: FindGMP.cmake
egs/: caesar.py
include/Ciphey/: candidates.hpp  candidates.swig.hxx  freq.hpp  swig.hpp  typedefs.hpp
include/ciphey/: ausearch.hpp  ausearch.swig.hxx  candidates.hpp  candidates.swig.hxx  ciphers.hpp  ciphers.swig.hxx  freq.hpp  proper.hpp  span.hpp  swig.hpp  swig.typemaps.hxx  typedefs.hpp
py/: build.py  pyproject.toml  pyproject.toml.in  python.i
src/: ausearch.cpp  callable.py  candidates.cpp  candidates.hxx  freq.cpp  proper.cpp  setup.py
src/ciphers/: caesar.cpp  common.hpp  playfair.cpp  vigenere.cpp  xor_single.cpp  xorcrypt.cpp
swig/: python.i
test/: ausearch.cxx  caesar.cxx  common.hpp  freq.cxx  proper.cxx  vigenere.cxx  xor.cxx  xor_single.cxx  xorcrypt.cxx
